using System.Collections.Concurrent;
using System.Diagnostics;
using System.Drawing;
using Baketa.Core.Abstractions.Imaging;
using Baketa.Core.Abstractions.OCR;
using Baketa.Core.Models.OCR;
using Baketa.Infrastructure.OCR.Clients;
using Baketa.Infrastructure.OCR.Services;
using Baketa.Ocr.V1;
using Microsoft.Extensions.Logging;

namespace Baketa.Infrastructure.OCR.Engines;

/// <summary>
/// Surya OCR ã‚¨ãƒ³ã‚¸ãƒ³å®Ÿè£…
/// Issue #189: gRPCãƒ™ãƒ¼ã‚¹ã®Surya OCRçµ±åˆ
///
/// ç‰¹å¾´:
/// - Python gRPCã‚µãƒ¼ãƒãƒ¼çµŒç”±ã§Surya OCRã‚’å‘¼ã³å‡ºã—
/// - 90+è¨€èªå¯¾å¿œï¼ˆæ—¥æœ¬èª/è‹±èªé«˜ç²¾åº¦ï¼‰
/// - ãƒ“ã‚¸ãƒ¥ã‚¢ãƒ«ãƒãƒ™ãƒ«ã®ãƒ€ã‚¤ã‚¢ãƒ­ã‚°ãƒ†ã‚­ã‚¹ãƒˆæ¤œå‡ºã«æœ€é©åŒ–
/// </summary>
public sealed class SuryaOcrEngine : IOcrEngine
{
    private readonly GrpcOcrClient _client;
    private readonly SuryaServerManager? _serverManager;
    private readonly ILogger<SuryaOcrEngine> _logger;
    private readonly OcrEngineSettings _settings;
    private readonly ConcurrentDictionary<string, long> _performanceStats = new();
    private readonly SemaphoreSlim _initLock = new(1, 1);
    private readonly DateTime _startTime = DateTime.UtcNow;

    private bool _isInitialized;
    private bool _disposed;
    private int _consecutiveFailures;
    private int _totalProcessed;
    private int _errorCount;
    private double _minTimeMs = double.MaxValue;
    private double _maxTimeMs;
    private CancellationTokenSource? _currentTimeoutCts;

    private static readonly IReadOnlyList<string> SupportedLanguages =
    [
        "ja", "en", "zh", "ko", "fr", "de", "es", "it", "pt", "ru",
        "ar", "hi", "th", "vi", "id", "ms", "nl", "pl", "tr", "uk"
    ];

    /// <summary>
    /// ã‚³ãƒ³ã‚¹ãƒˆãƒ©ã‚¯ã‚¿ï¼ˆã‚µãƒ¼ãƒãƒ¼è‡ªå‹•èµ·å‹•å¯¾å¿œï¼‰
    /// </summary>
    public SuryaOcrEngine(GrpcOcrClient client, SuryaServerManager serverManager, ILogger<SuryaOcrEngine> logger)
    {
        ArgumentNullException.ThrowIfNull(client);
        ArgumentNullException.ThrowIfNull(logger);

        _client = client;
        _serverManager = serverManager;
        _logger = logger;
        _settings = new OcrEngineSettings
        {
            Language = "ja",
            EnablePreprocessing = false, // Suryaã¯å‰å‡¦ç†ä¸è¦
            DetectionThreshold = 0.5
        };

        _logger.LogInformation("SuryaOcrEngine created (with auto-start support)");
    }

    /// <summary>
    /// ã‚³ãƒ³ã‚¹ãƒˆãƒ©ã‚¯ã‚¿ï¼ˆå¾Œæ–¹äº’æ›æ€§ç”¨ï¼‰
    /// </summary>
    public SuryaOcrEngine(GrpcOcrClient client, ILogger<SuryaOcrEngine> logger)
        : this(client, null!, logger)
    {
    }

    /// <inheritdoc/>
    public string EngineName => "Surya OCR";

    /// <inheritdoc/>
    public string EngineVersion => "0.17.0";

    /// <inheritdoc/>
    public bool IsInitialized => _isInitialized;

    /// <inheritdoc/>
    public string? CurrentLanguage => _settings.Language;

    /// <inheritdoc/>
    public async Task<bool> InitializeAsync(
        OcrEngineSettings? settings = null,
        CancellationToken cancellationToken = default)
    {
        if (_isInitialized) return true;

        await _initLock.WaitAsync(cancellationToken).ConfigureAwait(false);
        try
        {
            if (_isInitialized) return true;

            if (settings != null)
            {
                _settings.Language = settings.Language;
                _settings.EnablePreprocessing = settings.EnablePreprocessing;
                _settings.DetectionThreshold = settings.DetectionThreshold;
            }

            // ã‚µãƒ¼ãƒãƒ¼è‡ªå‹•èµ·å‹•ï¼ˆSuryaServerManagerãŒè¨­å®šã•ã‚Œã¦ã„ã‚‹å ´åˆï¼‰
            if (_serverManager != null)
            {
                _logger.LogInformation("ğŸš€ [Surya] ã‚µãƒ¼ãƒãƒ¼è‡ªå‹•èµ·å‹•é–‹å§‹...");
                Console.WriteLine("ğŸš€ [Surya] ã‚µãƒ¼ãƒãƒ¼è‡ªå‹•èµ·å‹•é–‹å§‹...");

                var serverStarted = await _serverManager.StartServerAsync(cancellationToken).ConfigureAwait(false);

                if (!serverStarted)
                {
                    _logger.LogError("âŒ [Surya] ã‚µãƒ¼ãƒãƒ¼è‡ªå‹•èµ·å‹•å¤±æ•—");
                    Console.WriteLine("âŒ [Surya] ã‚µãƒ¼ãƒãƒ¼è‡ªå‹•èµ·å‹•å¤±æ•—");
                    return false;
                }

                _logger.LogInformation("âœ… [Surya] ã‚µãƒ¼ãƒãƒ¼èµ·å‹•å®Œäº†");
                Console.WriteLine("âœ… [Surya] ã‚µãƒ¼ãƒãƒ¼èµ·å‹•å®Œäº†");
            }

            // ã‚µãƒ¼ãƒãƒ¼æ¥ç¶šç¢ºèª
            var readyResponse = await _client.IsReadyAsync(cancellationToken).ConfigureAwait(false);

            if (readyResponse.IsReady)
            {
                _isInitialized = true;
                _logger.LogInformation("âœ… SuryaOcrEngine initialized successfully");
                Console.WriteLine("âœ… SuryaOcrEngine initialized successfully");
                return true;
            }

            _logger.LogWarning("Surya OCR server not ready: {Status}", readyResponse.Status);
            return false;
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "Failed to initialize SuryaOcrEngine");
            return false;
        }
        finally
        {
            _initLock.Release();
        }
    }

    /// <inheritdoc/>
    public async Task<bool> WarmupAsync(CancellationToken cancellationToken = default)
    {
        try
        {
            var healthResponse = await _client.HealthCheckAsync(cancellationToken).ConfigureAwait(false);
            return healthResponse.IsHealthy;
        }
        catch (Exception ex)
        {
            _logger.LogWarning(ex, "Warmup failed");
            return false;
        }
    }

    /// <inheritdoc/>
    public async Task<OcrResults> RecognizeAsync(
        IImage image,
        IProgress<OcrProgress>? progressCallback = null,
        CancellationToken cancellationToken = default)
    {
        return await RecognizeAsync(image, null, progressCallback, cancellationToken).ConfigureAwait(false);
    }

    /// <inheritdoc/>
    public async Task<OcrResults> RecognizeAsync(
        IImage image,
        Rectangle? regionOfInterest,
        IProgress<OcrProgress>? progressCallback = null,
        CancellationToken cancellationToken = default)
    {
        ObjectDisposedException.ThrowIf(_disposed, this);
        ArgumentNullException.ThrowIfNull(image);

        // è¨ºæ–­ãƒ­ã‚°
        Console.WriteLine($"ğŸ” [SuryaOCR] RecognizeAsyncå‘¼ã³å‡ºã— - IsInitialized: {_isInitialized}, ImageSize: {image.Width}x{image.Height}");
        _logger.LogInformation("ğŸ” [SuryaOCR] RecognizeAsyncå‘¼ã³å‡ºã— - IsInitialized: {IsInit}, ImageSize: {W}x{H}",
            _isInitialized, image.Width, image.Height);

        var sw = Stopwatch.StartNew();
        progressCallback?.Report(new OcrProgress(0, "Starting OCR...") { Phase = OcrPhase.TextDetection });

        try
        {
            // ç”»åƒãƒ‡ãƒ¼ã‚¿å–å¾—ï¼ˆPNGã‚¨ãƒ³ã‚³ãƒ¼ãƒ‰æ¸ˆã¿ï¼‰- ãƒ¡ãƒ¢ãƒªåŠ¹ç‡æœ€é©åŒ–
            var imageMemory = image.GetImageMemory();
            Console.WriteLine($"ğŸ” [SuryaOCR] ç”»åƒãƒ‡ãƒ¼ã‚¿å–å¾—å®Œäº†: {imageMemory.Length} bytes");

            progressCallback?.Report(new OcrProgress(0.2, "Sending to Surya OCR...") { Phase = OcrPhase.TextDetection });

            // gRPCå‘¼ã³å‡ºã—ï¼ˆSpançµŒç”±ã§ä¸­é–“é…åˆ—ã‚’å›é¿ï¼‰
            Console.WriteLine($"ğŸ” [SuryaOCR] gRPCå‘¼ã³å‡ºã—é–‹å§‹...");
            var response = await _client.RecognizeAsync(
                imageMemory.ToArray(), // Note: GrpcOcrClientå†…ã§ByteString.CopyFromã‚’ä½¿ç”¨
                "png",
                [_settings.Language ?? "ja"],
                cancellationToken).ConfigureAwait(false);
            Console.WriteLine($"ğŸ” [SuryaOCR] gRPCå‘¼ã³å‡ºã—å®Œäº†: IsSuccess={response.IsSuccess}, RegionCount={response.Regions?.Count ?? 0}");

            progressCallback?.Report(new OcrProgress(0.8, "Processing results...") { Phase = OcrPhase.TextRecognition });

            if (!response.IsSuccess)
            {
                Interlocked.Increment(ref _consecutiveFailures);
                Interlocked.Increment(ref _errorCount);
                var errorMessage = response.Error?.Message ?? "Unknown error";
                _logger.LogWarning("Surya OCR failed: {Error}", errorMessage);

                progressCallback?.Report(new OcrProgress(1.0, $"Error: {errorMessage}") { Phase = OcrPhase.Completed });

                return new OcrResults(
                    [],
                    image,
                    sw.Elapsed,
                    _settings.Language ?? "ja",
                    regionOfInterest);
            }

            // æˆåŠŸæ™‚ã¯ã‚«ã‚¦ãƒ³ã‚¿ãƒªã‚»ãƒƒãƒˆ
            Interlocked.Exchange(ref _consecutiveFailures, 0);
            Interlocked.Increment(ref _totalProcessed);

            // gRPCãƒ¬ã‚¹ãƒãƒ³ã‚¹ã‚’OcrResultsã«å¤‰æ›
            var regions = ConvertToOcrTextRegions(response, regionOfInterest);

            sw.Stop();
            UpdatePerformanceStats(sw.ElapsedMilliseconds);

            progressCallback?.Report(new OcrProgress(1.0, $"Detected {regions.Count} regions") { Phase = OcrPhase.Completed });

            _logger.LogInformation(
                "Surya OCR completed: {RegionCount} regions in {ElapsedMs}ms",
                regions.Count,
                sw.ElapsedMilliseconds);

            return new OcrResults(
                regions,
                image,
                sw.Elapsed,
                _settings.Language ?? "ja",
                regionOfInterest);
        }
        catch (OperationCanceledException)
        {
            progressCallback?.Report(new OcrProgress(1.0, "Cancelled") { Phase = OcrPhase.Completed });
            throw;
        }
        catch (Exception ex)
        {
            Interlocked.Increment(ref _consecutiveFailures);
            Interlocked.Increment(ref _errorCount);
            _logger.LogError(ex, "Surya OCR error");
            progressCallback?.Report(new OcrProgress(1.0, $"Error: {ex.Message}") { Phase = OcrPhase.Completed });

            return new OcrResults(
                [],
                image,
                sw.Elapsed,
                _settings.Language ?? "ja",
                regionOfInterest);
        }
    }

    /// <inheritdoc/>
    public async Task<OcrResults> RecognizeAsync(
        OcrContext context,
        IProgress<OcrProgress>? progressCallback = null)
    {
        ArgumentNullException.ThrowIfNull(context);
        ArgumentNullException.ThrowIfNull(context.Image);

        var roi = context.CaptureRegion != Rectangle.Empty ? context.CaptureRegion : (Rectangle?)null;

        using var cts = CancellationTokenSource.CreateLinkedTokenSource(context.CancellationToken);
        _currentTimeoutCts = cts;

        try
        {
            return await RecognizeAsync(context.Image, roi, progressCallback, cts.Token).ConfigureAwait(false);
        }
        finally
        {
            _currentTimeoutCts = null;
        }
    }

    /// <inheritdoc/>
    public async Task<OcrResults> DetectTextRegionsAsync(
        IImage image,
        CancellationToken cancellationToken = default)
    {
        // Suryaã¯æ¤œå‡ºã¨èªè­˜ã‚’åŒæ™‚ã«è¡Œã†ãŸã‚ã€RecognizeAsyncã‚’å‘¼ã³å‡ºã™
        return await RecognizeAsync(image, null, null, cancellationToken).ConfigureAwait(false);
    }

    /// <inheritdoc/>
    public OcrEngineSettings GetSettings() => _settings;

    /// <inheritdoc/>
    public Task ApplySettingsAsync(OcrEngineSettings settings, CancellationToken cancellationToken = default)
    {
        ArgumentNullException.ThrowIfNull(settings);

        _settings.Language = settings.Language;
        _settings.EnablePreprocessing = settings.EnablePreprocessing;
        _settings.DetectionThreshold = settings.DetectionThreshold;

        _logger.LogDebug("Settings applied: Language={Language}", _settings.Language);

        return Task.CompletedTask;
    }

    /// <inheritdoc/>
    public IReadOnlyList<string> GetAvailableLanguages() => SupportedLanguages;

    /// <inheritdoc/>
    public IReadOnlyList<string> GetAvailableModels() => ["surya-0.17.0"];

    /// <inheritdoc/>
    public Task<bool> IsLanguageAvailableAsync(string languageCode, CancellationToken cancellationToken = default)
    {
        var isAvailable = SupportedLanguages.Contains(languageCode, StringComparer.OrdinalIgnoreCase);
        return Task.FromResult(isAvailable);
    }

    /// <inheritdoc/>
    public OcrPerformanceStats GetPerformanceStats()
    {
        _performanceStats.TryGetValue("total_time_ms", out var totalTimeMs);

        var avgTimeMs = _totalProcessed > 0 ? (double)totalTimeMs / _totalProcessed : 0;
        var successRate = (_totalProcessed + _errorCount) > 0
            ? (double)_totalProcessed / (_totalProcessed + _errorCount)
            : 1.0;

        return new OcrPerformanceStats
        {
            TotalProcessedImages = _totalProcessed,
            AverageProcessingTimeMs = avgTimeMs,
            MinProcessingTimeMs = _minTimeMs == double.MaxValue ? 0 : _minTimeMs,
            MaxProcessingTimeMs = _maxTimeMs,
            ErrorCount = _errorCount,
            SuccessRate = successRate,
            StartTime = _startTime,
            LastUpdateTime = DateTime.UtcNow
        };
    }

    /// <inheritdoc/>
    public void CancelCurrentOcrTimeout()
    {
        try
        {
            _currentTimeoutCts?.Cancel();
        }
        catch (ObjectDisposedException)
        {
            // æ—¢ã«Disposeã•ã‚Œã¦ã„ã‚‹å ´åˆã¯ç„¡è¦–
        }
    }

    /// <inheritdoc/>
    public int GetConsecutiveFailureCount() => _consecutiveFailures;

    /// <inheritdoc/>
    public void ResetFailureCounter()
    {
        Interlocked.Exchange(ref _consecutiveFailures, 0);
        _logger.LogDebug("Failure counter reset");
    }

    /// <inheritdoc/>
    public void Dispose()
    {
        if (_disposed) return;
        _disposed = true;

        _currentTimeoutCts?.Dispose();
        _initLock.Dispose();
        _client.Dispose();

        _logger.LogDebug("SuryaOcrEngine disposed");
    }

    /// <summary>
    /// gRPCãƒ¬ã‚¹ãƒãƒ³ã‚¹ã‚’OcrTextRegionãƒªã‚¹ãƒˆã«å¤‰æ›
    /// </summary>
    private static List<OcrTextRegion> ConvertToOcrTextRegions(
        OcrResponse response,
        Rectangle? regionOfInterest)
    {
        var regions = new List<OcrTextRegion>();

        foreach (var region in response.Regions)
        {
            var bbox = region.BoundingBox;
            var bounds = new Rectangle(
                bbox.X,
                bbox.Y,
                bbox.Width,
                bbox.Height);

            // ROIãŒã‚ã‚‹å ´åˆã¯åº§æ¨™ã‚’èª¿æ•´
            if (regionOfInterest.HasValue)
            {
                var roi = regionOfInterest.Value;
                bounds = new Rectangle(
                    bounds.X + roi.X,
                    bounds.Y + roi.Y,
                    bounds.Width,
                    bounds.Height);
            }

            regions.Add(new OcrTextRegion(
                region.Text,
                bounds,
                region.Confidence));
        }

        return regions;
    }

    /// <summary>
    /// ãƒ‘ãƒ•ã‚©ãƒ¼ãƒãƒ³ã‚¹çµ±è¨ˆã‚’æ›´æ–°
    /// </summary>
    private void UpdatePerformanceStats(long elapsedMs)
    {
        _performanceStats.AddOrUpdate("total_time_ms", elapsedMs, (_, v) => v + elapsedMs);
        _performanceStats["last_time_ms"] = elapsedMs;

        // Min/Maxæ›´æ–°
        if (elapsedMs < _minTimeMs) _minTimeMs = elapsedMs;
        if (elapsedMs > _maxTimeMs) _maxTimeMs = elapsedMs;
    }
}
